Added sci fair 2020

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -48,8 +48,6 @@
                 <h2>University of Wyoming (Class of 2024)</h2>
                 <p><strong>Major:</strong> Computer Science<br>
                     <strong>Major:</strong> Computer Engineering<br /></p>
-
-                <!-- <strong>Minor:</strong> Scale Tending</p> -->
             </dd>
 
             <dd class="clear"></dd>
@@ -106,8 +104,15 @@
                 <li>AIAA RM Aerospace Prize.</li>
                 <li>NCAR Excellence in Computer Science / Mathematics.</li>
                 <li>Intel Excellence in Computer Science.</li>
-                <li>IEEE Most Oustanding Senior Divion Project</li>
+                <li>IEEE Most Oustanding Senior Divion Project.</li>
                 <a href="https://github.com/jarulsamy/robotTracking">Github</a>
+
+                <h2>2020 State Science Fair - Machine Learning Applications in Cancer Detection</h2>
+                <li>1<sup>st</sup> place category award in Robotics and Intelligent Machines.</li>
+                <li>1<sup>st</sup> place UW Department of Mathematics and Statistics.</li>
+                <li>Wyoming Research Scholars Proram Recepient.</li>
+                <li>United States Air Force award.</li>
+                <a href="https://github.com/jarulsamy/cancer-detection">Github</a>
             </dd>
 
             <dd class="clear"></dd>
@@ -119,7 +124,7 @@
                 <p>Participants from all over the country gather at the University of Wyoming to compete in
                     a hackathon. In this event, I formed a team with two other students and rapidly developed
                     a Python frontend to the DECENT crypto wallet. After 48 hours of grueling
-                    programming, we presented our project to the other participants</p>
+                    programming, we presented our project to the other participants.</p>
                 <h2>2019 Wyohackathon 2<sup>nd</sup> Place Winner - Arcade Unhackable Game Challenge</h2>
                 <p>
                     I formed a team with three other students and wrote a powerful game anti-cheat mechanism in Python
