Added isef details

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -112,6 +112,9 @@
                 <li>1<sup>st</sup> place UW Department of Mathematics and Statistics.</li>
                 <li>Wyoming Research Scholars Proram Recepient.</li>
                 <li>United States Air Force award.</li>
+                <li>Regeneron International Science and Engineering Fair <a
+                        href="https://abstracts.societyforscience.org/Home/FullAbstract?ISEFYears=2020%2C&Category=Any%20Category&AllAbstracts=True&FairCountry=Any%20Country&FairState=Any%20State&Keywords=machine%20learning&ProjectId=19445">Finalist</a>
+                </li>
                 <a href="https://github.com/jarulsamy/cancer-detection">Github</a>
             </dd>
 
