--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,24 +1,25 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> -->
+<!DOCTYPE HTML PUBLIC>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!-- <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> -->
+<html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-    <title>Joshua Arulsamy</title>
-
+    <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
+    <meta name="Description" content="Joshua Arulsamy onepage resume">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <!-- Apple Touch Logo -->
+    <link rel="apple-touch-icon" href="favicon.ico">
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="style.css">
 
+    <title>Joshua Arulsamy</title>
 </head>
 
 <body>
-
     <div id="page-wrap">
-
-
         <div id="contact-info" class="vcard">
-
             <!-- Microformats! -->
             <h1 class="fn">Joshua Arulsamy</h1>
             <p>
@@ -27,9 +28,7 @@
                 Github: <a href="https://github.com/jarulsamy">jarulsamy</a><br>
                 LinkedIn: <a href="https://www.linkedin.com/in/joshua-arulsamy-1437ba194/">Joshua Arulsamy</a><br>
             </p>
-
         </div>
-
         <div id="objective">
             <p>
                 I am an energetic young professional, computer science student at the University of Wyoming, seeking a
@@ -37,45 +36,42 @@
                 to computing.
             </p>
         </div>
-
         <div class="clear"></div>
-
         <dl>
             <dd class="clear"></dd>
-
             <dt>Education</dt>
             <dd>
                 <h2>University of Wyoming (Class of 2024)</h2>
                 <p><strong>Major:</strong> Computer Science<br>
                     <strong>Major:</strong> Computer Engineering<br /></p>
             </dd>
-
             <dd class="clear"></dd>
-
             <dt>Skills</dt>
             <dd>
                 <h2>Programming</h2>
-                <li>Python</li>
-                <li>C/C++</li>
-                <li>Flask and Django based web development.</li>
-                <li>Some HTML, CSS, and JS.</li>
-                <li>Bash and ZSH scripting.</li>
-                <li>A willingness to learn anything related to computing.</li>
+                <ul>
+                    <li>Python</li>
+                    <li>C/C++</li>
+                    <li>Flask and Django based web development.</li>
+                    <li>Some HTML, CSS, and JS.</li>
+                    <li>Bash and ZSH scripting.</li>
+                    <li>A willingness to learn anything related to computing.</li>
+                </ul>
 
                 <h2>System Administration</h2>
-                <li>Database management with popular applications (MySQL, PostgreSQL, etc).</li>
-                <li>System network architecture.</li>
-                <li>Linux server administration (both Debian-Based and RHEL systems).</li>
-                <li>Experience designing and implementing Nginx reverse proxies.</li>
-                <li>Creating and managing docker images/containers.</li>
+                <ul>
+                    <li>Database management with popular applications (MySQL, PostgreSQL, etc).</li>
+                    <li>System network architecture.</li>
+                    <li>Linux server administration (both Debian-Based and RHEL systems).</li>
+                    <li>Experience designing and implementing Nginx reverse proxies.</li>
+                    <li>Creating and managing docker images/containers.</li>
+                </ul>
 
                 <h2>Office</h2>
                 <p>Office and records management, database administration, Microsoft productivity software (Word, Excel,
                     etc), Windows.</p>
             </dd>
-
             <dd class="clear"></dd>
-
             <dt>Experience</dt>
             <dd>
                 <h2>PhoneClearly <span>Developer - Remote - Summer of 2020</span></h2>
@@ -84,44 +80,44 @@
                     <li>Built and maintained a server infrastructure.</li>
                     <li>Managed a PostgreSQL database following enterprise standards.</li>
                 </ul>
-
             </dd>
-
             <dd class="clear"></dd>
-
             <dt>Notable Achievements and Projects</dt>
             <dd>
                 <h2>2018 State Science Fair - Object Tracking Through Alternate Color Spaces and Computer Vision</h2>
-                <li>1<sup>st</sup> place category award in Robotics and Intelligent Machines.</li>
-                <li>AIAA RM Aerospace Prize.</li>
-                <li>NCAR Excellence in Computer Science / Mathematics.</li>
-                <li>Intel Excellence in Computer Science.</li>
-                <a href="https://github.com/jarulsamy/robotTracking">Github</a>
+                <ul>
+                    <li>1<sup>st</sup> place category award in Robotics and Intelligent Machines.</li>
+                    <li>AIAA RM Aerospace Prize.</li>
+                    <li>NCAR Excellence in Computer Science / Mathematics.</li>
+                    <li>Intel Excellence in Computer Science.</li>
+                    <li><a href="https://github.com/jarulsamy/robotTracking">Github</a></li>
+                </ul>
 
                 <h2>2019 State Science Fair - Click-and-Go: Object Detection through Alternate Color Spaces and Deep
                     Neural Networks</h2>
-                <li>1<sup>st</sup> place category award in Robotics and Intelligent Machines.</li>
-                <li>AIAA RM Aerospace Prize.</li>
-                <li>NCAR Excellence in Computer Science / Mathematics.</li>
-                <li>Intel Excellence in Computer Science.</li>
-                <li>IEEE Most Oustanding Senior Divion Project.</li>
-                <a href="https://github.com/jarulsamy/robotTracking">Github</a>
+                <ul>
+                    <li>1<sup>st</sup> place category award in Robotics and Intelligent Machines.</li>
+                    <li>AIAA RM Aerospace Prize.</li>
+                    <li>NCAR Excellence in Computer Science / Mathematics.</li>
+                    <li>Intel Excellence in Computer Science.</li>
+                    <li>IEEE Most Oustanding Senior Divion Project.</li>
+                    <li><a href="https://github.com/jarulsamy/robotTracking">Github</a></li>
+                </ul>
 
                 <h2>2020 State Science Fair - Machine Learning Applications in Cancer Detection</h2>
-                <li>1<sup>st</sup> place category award in Robotics and Intelligent Machines.</li>
-                <li>1<sup>st</sup> place UW Department of Mathematics and Statistics.</li>
-                <li>Wyoming Research Scholars Proram Recepient.</li>
-                <li>United States Air Force award.</li>
-                <li>Regeneron International Science and Engineering Fair <a
-                        href="https://abstracts.societyforscience.org/Home/FullAbstract?ISEFYears=2020%2C&Category=Any%20Category&AllAbstracts=True&FairCountry=Any%20Country&FairState=Any%20State&Keywords=machine%20learning&ProjectId=19445">Finalist</a>
-                </li>
-                <a href="https://github.com/jarulsamy/cancer-detection">Github</a>
+                <ul>
+                    <li>1<sup>st</sup> place category award in Robotics and Intelligent Machines.</li>
+                    <li>1<sup>st</sup> place UW Department of Mathematics and Statistics.</li>
+                    <li>Wyoming Research Scholars Proram Recepient.</li>
+                    <li>United States Air Force award.</li>
+                    <li>Regeneron International Science and Engineering Fair <a
+                            href="https://abstracts.societyforscience.org/Home/FullAbstract?ISEFYears=2020%2C&Category=Any%20Category&AllAbstracts=True&FairCountry=Any%20Country&FairState=Any%20State&Keywords=machine%20learning&ProjectId=19445">Finalist</a>
+                    <li><a href="https://github.com/jarulsamy/cancer-detection">Github</a></li>
+                    </li>
+                </ul>
             </dd>
-
             <dd class="clear"></dd>
-
             <dt>Hackathons</dt>
-
             <dd>
                 <h2>2018 Wyohackathon 3<sup>rd</sup> Place Winner - DECENT Cryptocurrency Challenge</h2>
                 <p>Participants from all over the country gather at the University of Wyoming to compete in
@@ -134,28 +130,21 @@
                     and C++.
                 </p>
             </dd>
-
-
             <dd class="clear"></dd>
-
             <dt>Hobbies</dt>
             <dd>
-                <li>Contributing to open source projects.</li>
-                <li>Writing my own OS.</li>
+                <ul>
+                    <li>Contributing to open source projects.</li>
+                    <li>Writing my own OS.</li>
+                </ul>
             </dd>
-
             <dd class="clear"></dd>
-
             <dt>References</dt>
             <dd>Available on request</dd>
-
             <dd class="clear"></dd>
         </dl>
-
         <div class="clear"></div>
-
     </div>
-
 </body>
 
 </html>
