:pencil: Fix typos

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -53,8 +53,8 @@
                     <li>Python</li>
                     <li>C/C++</li>
                     <li>Flask and Django based web development.</li>
-                    <li>Some HTML, CSS, and JS.</li>
                     <li>Bash and ZSH scripting.</li>
+                    <li>Some HTML, CSS, and JS.</li>
                     <li>A willingness to learn anything related to computing.</li>
                 </ul>
 
@@ -64,7 +64,7 @@
                     <li>System network architecture.</li>
                     <li>Linux server administration (both Debian-Based and RHEL systems).</li>
                     <li>Experience designing and implementing Nginx reverse proxies.</li>
-                    <li>Creating and managing docker images/containers.</li>
+                    <li>Containerizing application using docker.</li>
                 </ul>
 
                 <h2>Office</h2>
@@ -100,7 +100,7 @@
                     <li>AIAA RM Aerospace Prize.</li>
                     <li>NCAR Excellence in Computer Science / Mathematics.</li>
                     <li>Intel Excellence in Computer Science.</li>
-                    <li>IEEE Most Oustanding Senior Divion Project.</li>
+                    <li>IEEE Most Outstanding Senior Divion Project.</li>
                     <li><a href="https://github.com/jarulsamy/robotTracking">Github</a></li>
                 </ul>
 
@@ -108,7 +108,7 @@
                 <ul>
                     <li>1<sup>st</sup> place category award in Robotics and Intelligent Machines.</li>
                     <li>1<sup>st</sup> place UW Department of Mathematics and Statistics.</li>
-                    <li>Wyoming Research Scholars Proram Recepient.</li>
+                    <li>Wyoming Research Scholars Program Recipient.</li>
                     <li>United States Air Force award.</li>
                     <li>Regeneron International Science and Engineering Fair <a
                             href="https://abstracts.societyforscience.org/Home/FullAbstract?ISEFYears=2020%2C&Category=Any%20Category&AllAbstracts=True&FairCountry=Any%20Country&FairState=Any%20State&Keywords=machine%20learning&ProjectId=19445">Finalist</a>
