:pencil: Add list of personal projects

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -139,6 +139,23 @@
                 </ul>
             </dd>
             <dd class="clear"></dd>
+            <dt>Notable Projects</dt>
+            <dd>
+                <ul>
+                    <li><a href="https://github.com/jarulsamy/Plex-Bot">Plex-Bot</a> - A music player bot for discord
+                        written in Python.</li>
+                    <li><a href="https://github.com/jarulsamy/myro">myro</a> - A simple robot interaction library for
+                        Python.</li>
+                    <li><a href="https://github.com/jarulsamy/tic-tac-ai">tic-tac-ai</a> - Building the perfect
+                        tic-tac-toe AI using C++ and Python.</li>
+                    <li><a href="https://github.com/jarulsamy/Graduation-Countdown">Graduation-Countdown</a> - A simple
+                        python app to countdown the number of days to my highschool
+                        graduation and displays in on a 16x2 LCD.</li>
+                    <li><a href="https://github.com/jarulsamy/ESP8622-REST">ESP8622-REST</a> - A demo of interacting
+                        with a webserver with a ESP8622 microcontroller.</li>
+                </ul>
+            </dd>
+            <dd class="clear"></dd>
             <dt>References</dt>
             <dd>Available on request</dd>
             <dd class="clear"></dd>
